--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@replit/database": "^2.0.1",
     "body-parser": "^1.19.0",
     "discord.js": "^12.5.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jquery": "^3.6.0",
+    "jsdom": "^18.0.0"
   },
   "devDependencies": {
     "node": "^16.10.0"
